PR-3849: Introduced tesla service layer (#62)
- introduced tesla service layer
