# docs/swagger.json
@@ -256,7 +256,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_controllers.VirtualKeyStatusResponse"
+                            "$ref": "#/definitions/github_com_DIMO-Network_tesla-oracle_internal_models.VirtualKeyStatusResponse"
                         }
                     },
                     "400": {
@@ -777,6 +777,23 @@
                 }
             }
         },
+        "github_com_DIMO-Network_tesla-oracle_internal_models.DeviceDefinitionRes": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "make": {
+                    "type": "string"
+                },
+                "model": {
+                    "type": "string"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
+        },
         "github_com_DIMO-Network_tesla-oracle_internal_models.NextAction": {
             "type": "object",
             "properties": {
@@ -784,6 +801,20 @@
                     "type": "string"
                 },
                 "method": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_DIMO-Network_tesla-oracle_internal_models.TeslaVehicleRes": {
+            "type": "object",
+            "properties": {
+                "definition": {
+                    "$ref": "#/definitions/github_com_DIMO-Network_tesla-oracle_internal_models.DeviceDefinitionRes"
+                },
+                "externalId": {
+                    "type": "string"
+                },
+                "vin": {
                     "type": "string"
                 }
             }
@@ -799,6 +830,17 @@
                 },
                 "next": {
                     "$ref": "#/definitions/github_com_DIMO-Network_tesla-oracle_internal_models.NextAction"
+                }
+            }
+        },
+        "github_com_DIMO-Network_tesla-oracle_internal_models.VirtualKeyStatusResponse": {
+            "type": "object",
+            "properties": {
+                "added": {
+                    "type": "boolean"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
@@ -819,25 +861,8 @@
                 "vehicles": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal_controllers.TeslaVehicle"
+                        "$ref": "#/definitions/github_com_DIMO-Network_tesla-oracle_internal_models.TeslaVehicleRes"
                     }
-                }
-            }
-        },
-        "internal_controllers.DeviceDefinition": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "make": {
-                    "type": "string"
-                },
-                "model": {
-                    "type": "string"
-                },
-                "year": {
-                    "type": "integer"
                 }
             }
         },
@@ -908,20 +933,6 @@
                 }
             }
         },
-        "internal_controllers.TeslaVehicle": {
-            "type": "object",
-            "properties": {
-                "definition": {
-                    "$ref": "#/definitions/internal_controllers.DeviceDefinition"
-                },
-                "externalId": {
-                    "type": "string"
-                },
-                "vin": {
-                    "type": "string"
-                }
-            }
-        },
         "internal_controllers.VinStatus": {
             "type": "object",
             "properties": {
@@ -987,17 +998,6 @@
                     "items": {
                         "$ref": "#/definitions/internal_controllers.VinWithTokenID"
                     }
-                }
-            }
-        },
-        "internal_controllers.VirtualKeyStatusResponse": {
-            "type": "object",
-            "properties": {
-                "added": {
-                    "type": "boolean"
-                },
-                "status": {
-                    "type": "string"
                 }
             }
         },
